--- a/tmux.conf
+++ b/tmux.conf
@@ -66,9 +66,9 @@ run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 #
 # New keybindings for vi-mode when version >= 2.4
 # https://github.com/tmux/tmux/issues/754
-if-shell -b '[ "$(echo -e "$TMUX_VERSION\n"2.4 | sort -V | head -n1)" == "2.4" ]' \
-   'bind -T copy-mode-vi "v" send-keys -X begin-selection; \
-    bind -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "pbcopy"; \
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
+  'bind-key -T copy-mode-vi v send-keys -X begin-selection ; \
+  bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy" ; \
   unbind -T copy-mode-vi Enter ; \
   bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"; ' \
   'bind-key -t vi-copy v begin-selection ; \
